--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "AppCoderHouse",
-    "slug": "AppCoderHouse",
+    "name": "clase3",
+    "slug": "clase3",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
